--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -88,6 +88,6 @@ footer span {
   }
 
   #intro {
-    margin: 1rem auto;
+    margin: 3rem auto;
   }
 }
